--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
     "version": 2,
+    "buildCommand": [
+    {
+      "src": "connectify/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
+    }
+  ],
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
       { "src": "/media/(.*)", "dest": "/media/$1" },
