--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,26 @@
       "src": "connectify/wsgi.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "50mb"
+        "maxLambdaSize": "50mb", "runtime": "python3.11"
       }
+    },
+    {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+            "distDir": "staticfiles"
+        }
     }
   ],
     "routes": [
-      { "src": "/static/(.*)", "dest": "/static/$1" },
-      { "src": "/media/(.*)", "dest": "/media/$1" },
-      { "src": "/(.*)", "dest": "connectify/wsgi.py" }
+      {
+        "src": "/static/(.*)",
+      "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "connectify/wsgi.py"
+      }
     ],
     "env": {
       "DJANGO_SETTINGS_MODULE": "connectify.settings",
