--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "connectify/wsgi.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "50mb", "runtime": "python3.11"
+        "maxLambdaSize": "50mb", "runtime": "python"
       }
     },
     {
